--- a/interviews/三菱（20170221）.md
+++ b/interviews/三菱（20170221）.md
@@ -1,4 +1,6 @@
-下午不到三点半接到面试通知、时间是在下午4：30、
+　　下午不到三点半接到面试通知、mrsWang 到我座位问我下午4点半是否有时间、liuyan叫我告诉你一会找你聊聊。当时我并没有听清楚是谁、我问了句是哪个项目的、Wang应该是不知道、尴尬了3秒左右、我左手边的cyou说是三菱的、在SO4。wang走后一分钟我迅速紧张起来、感觉心跳一定是超过了100、我尽量的保持冷静、并且试着深呼吸、然而并没有缓解我的紧张、我看了一眼时间16:57（我电脑是JST）、感觉自己的心跳频率并没有降低的迹象、迅速的打开了笔记（wiz、此处不是插广告、毕竟笔记用了快6年了）找了spring mvc部分、看了大约3分钟、迅速的翻阅算法部分、并试着在纸上写出来、我感觉自己的手在抖、是真在抖（不受控制那种）、试着在纸上写完后看了一眼时间、好像是不到15的样子、我忘记了。查笔记的时候我带上耳机在听歌、这期间我并没有记得都过去了什么歌、我以为听歌能缓解我的紧张、然而并没有、我翻看了日语的自我介绍、有两份、看了一种的一份、默念了一遍。我记得当时的耳边听的歌是IF YOU bigbang的、听的时候我好了很多、当时很自嘲、感觉自己很久没有参加面试的原因么、如此的尴尬紧张。并想了一堆的方案（其实就死扯）想去多参加几次、训练下面试、（感觉自己不会去干）
 
-面试地点SO3 612 、到位置的时候是16:25、会议室有人、敲门、第一个尴尬的事情发生了、我说我是来参加面试的、可能会议室的三个妹子太专注没有听清楚、
-对方说会议室预定到几点、再使用20分钟可以吗、我说不好意思、会议室不是我预定的、我是被面试者。在门口等待大约1分钟到两分钟左右后、另外一个妹子从大开发间出来（貌似是打开发件、或者是短面门口进来的）进入了会议室、大约30秒后陆续几个妹子出来、报以微笑、最后一个妹子出来的时候说了一声抱歉、我进入了会议室、会议室是正常的小圆桌会议室、一台电话、4把椅子、玻璃白板是干净的、先坐在第一个椅子上、离门口最近的一个、可能刚才的时候三个妹子在讨论问题、4个椅子都紧靠在一起、大约在圆桌的三分之二处、正对门口并没有椅子、犹豫了一下、把我坐的椅子调到了门口处、将里面的一个凳子移出来半米左右、等待了大约2分钟到3分钟的样子、起初我以为会很快来人、其实并没有、当然那时候每一分钟感觉都很长、我来的时候带了自己的文件夹同名的夹子里面全是A4纸、我记录的一些项目或者会议的东西、还有一只1.5圆的碳素笔、第一个进来的是一个胖子、挺面善、其实我一直不太喜欢胖子、但是这个哥们给我的感觉也很好、他进来的时候、我正在看我以前在羡慕上记得乱八七糟的东西、从椅子上站起来、互视了大约1秒到两秒钟、我先开口说我叫bluetata（此处是我姓名）、我是来参加面试的。这哥们也跟着说我是liuyan叫过来一起帮忙来面试的、你也是吗？此时尴尬的第二件事情发生了、我说不好意思我是被面试的
+面试地点SO4 612 、到位置的时候是16:25、会议室有人、敲门、第一个尴尬的事情发生了、我说我是来参加面试的、可能会议室的三个妹子太专注没有听清楚、对方说会议室预定到几点、再使用20分钟可以吗、我说不好意思、会议室不是我预定的、我是被面试者。在门口等待大约1分钟到两分钟左右后、另外一个妹子从大开发间出来（貌似是打开发件、或者是短面门口进来的）进入了会议室、大约30秒后陆续几个妹子出来、报以微笑、最后一个妹子出来的时候说了一声抱歉、我进入了会议室、会议室是正常的小圆桌会议室、一台电话、4把椅子、玻璃白板是干净的、先坐在第一个椅子上、离门口最近的一个、可能刚才的时候三个妹子在讨论问题、4个椅子都紧靠在一起、大约在圆桌的三分之二处、正对门口并没有椅子、犹豫了一下、把我坐的椅子调到了门口处、将里面的一个凳子移出来半米左右、等待了大约2分钟到3分钟的样子、起初我以为会很快来人、其实并没有、当然那时候每一分钟感觉都很长、我来的时候带了自己的文件夹同名的夹子里面全是A4纸、我记录的一些项目或者会议的东西、还有一只1.5圆的碳素笔。
+　　第一个进来的是一个胖子、挺面善、其实我一直不太喜欢胖子、但是这个哥们给我的感觉也很好、他进来的时候、我正在看我以前在羡慕上记得乱八七糟的东西、从椅子上站起来、互视了大约1秒到两秒钟、我先开口说我叫bluetata（此处是我姓名）、我是来参加面试的。这哥们也跟着说我是liuyan叫过来一起帮忙来面试的、你也是吗？此时尴尬的第二件事情发生了、我说不好意思我是被面试的、忘记说了、在之前他刚进屋的时候、我们相互注视的时候、我看了他一眼衣服、当时只是觉得大格子的毛衣还可以、他有些尴尬说“我忘记戴工牌了”、我才意识到他确实没有戴工牌、接下来更尴尬的事情发生 - -、他说我没有简历、他看我手上的本子、以为有简历、我当时也很尴尬、对他说了声抱歉。他打了个招呼出了会议室。
+
+　　等待了大约不到一分钟、一个女的进来、该是liu、我从凳子上起来、我说我是来参加面试的、她进来后、陆续又进来两个人、一个瘦子个子挺高
